samples/_failures_safe/1761181113_0994f5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1df88a83.c: In function ‘main’:
./samples/SAFE/__tmp_1df88a83.c:153:9: error: expected identifier or ‘(’ at end of input
  153 |         int
      |         ^~~
./samples/SAFE/__tmp_1df88a83.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1df88a83.c:153:9: error: expected declaration or statement at end of input
